cascade delete fix and date picker